2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Use "kB" and divide by 1000 to be correct with file sizes. Pointed
	out by Alexander Winston.  Also hide the dialogs when errors
	occur, and stop cleanup() crashing.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Define PKGDATADIR to DATADIR/sound-juicer.

	* src/sj-about.c:
	Fix the path to the funky orange. Spotted by Jordi Mallach.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add more comments, don't leak as much memory, and update the
	extract buttons as tracks are selected to be ripped.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Return an GError in create_directory_for(), and display error
	dialogs if the directory cannot be created.  Clamp the progress
	bar value (hides #125850). Show an error dialog if the extractor
	returns an error. Do more cleanups. Use different quotes when
	calling Nautilus on a hunch. I was busy last night...

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Remove the magic buffer size and use a #define instead. Remove C++
	comments. Return an error if the thread cannot be created.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix the error signal declaration.

2003-10-30  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Remove redundant gstreamer library checks.

2003-10-26  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Version 0.5.6
	* NEWS:
	Updated.

	* src/cd-drive.c:
	Updated.

2003-10-25  Christian Schaller <Uraeus@gnome.org>

	* Updates for 0.7 compatability
	* configure checks first for 0.7, if not then 0.6
	* Update spec file for latest changes in GStreamer packaging

2003-10-24  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the Extract and Re-read buttons when extracting. Fixes
	#135011.

2003-10-24  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.[ch]: