@@ -29,7 +29,7 @@ AC_PROG_INTLTOOL([0.20])
 ALL_LINGUAS="ar az be ca cs da de el es fr it ko ml nl no pl pt sr sr@Latn sv zh_CN zh_TW"
 AM_GLIB_GNU_GETTEXT dnl TODO: is this still required?
 
-PKG_CHECK_MODULES(GLIB, glib-2.0)
+PKG_CHECK_MODULES(GLIB, glib-2.0 gthread-2.0 gobject-2.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
